typescript/checker/tests/conformance/expressions/functionCalls/newWithSpreadES5.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            332,
        ),
        hi: BytePos(
            333,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpreadES5.ts:26:5
   |
26 | var a: string[];
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            349,
        ),
        hi: BytePos(
            350,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpreadES5.ts:27:5
   |
27 | var b: A;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            359,
        ),
        hi: BytePos(
            360,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpreadES5.ts:28:5
   |
28 | var c: C;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            369,
        ),
        hi: BytePos(
            370,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpreadES5.ts:29:5
   |
29 | var d: A[];
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            381,
        ),
        hi: BytePos(
            382,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpreadES5.ts:30:5
   |
30 | var e: { [key: string]: A };
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            410,
        ),
        hi: BytePos(
            411,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpreadES5.ts:31:5
   |
31 | var g: C[];
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            422,
        ),
        hi: BytePos(
            423,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpreadES5.ts:32:5
   |
32 | var h: { [key: string]: C };
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            451,
        ),
        hi: BytePos(
            452,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/newWithSpreadES5.ts:33:5
   |
33 | var i: C[][];
   |     ^

